@@ -3,16 +3,17 @@
 # for our tests. The WebKit version of gtest needs access to some
 # headers from WTF and JSC for configuration.
 
-include_directories(${THIRDPARTY_DIR}/gtest
-    ${THIRDPARTY_DIR}/gtest/include
-    ${JAVASCRIPTCORE_DIR}
-    ${DERIVED_SOURCES_JAVASCRIPTCORE_DIR}
-    ${WTF_DIR}
-)
-
 set(GTEST_DIR "${THIRDPARTY_DIR}/gtest")
 
-add_library(gtest SHARED
+set(GTEST_INCLUDE_DIRECTORIES
+    "${GTEST_DIR}"
+    "${GTEST_DIR}/include"
+    "${JAVASCRIPTCORE_DIR}"
+    "${DERIVED_SOURCES_JAVASCRIPTCORE_DIR}"
+    "${WTF_DIR}"
+)
+
+set(GTEST_SOURCES
     ${GTEST_DIR}/src/gtest.cc
     ${GTEST_DIR}/src/gtest-death-test.cc
     ${GTEST_DIR}/src/gtest-filepath.cc
@@ -22,6 +23,8 @@ add_library(gtest SHARED
     ${GTEST_DIR}/src/gtest-typed-test.cc
 )
 
+add_library(gtest SHARED ${GTEST_SOURCES})
+include_directories(${GTEST_INCLUDE_DIRECTORIES})
 add_definitions(-DGTEST_CREATE_SHARED_LIBRARY=1 -DGTEST_HAS_RTTI=0)
 
 # FIXME: This works around compatibility problems in the old version of the third-pary
