@@ -1,3 +1,15 @@
+2015-04-01  Gyuyoung Kim  <gyuyoung.kim@webkit.org>
+
+        [CMake] Make gtest/CMakeLists.txt more readable
+        https://bugs.webkit.org/show_bug.cgi?id=143295
+
+        Reviewed by Csaba Osztrogonác.
+
+        gtest/CMakeLists.txt has used add_library() and include_directory() directly.
+        This patch adds GTEST_INCLUDE_DIRECTORIES and GTEST_SOURCES, and use it.
+
+        * gtest/CMakeLists.txt:
+
 2015-03-29  Gyuyoung Kim  <gyuyoung.kim@samsung.com>
 
         [CMake] Update old CMakeList.txt in gtest
